# RI

assignement_b/: CMakeLists.txt  README.MD  package.xml
assignement_b/launch/: my_world.launch
assignement_b/src/: reactive_turtlebot.cpp
assignement_b/worlds/: b.sdf  b_.world  b_w_turtle.world  b_w_turtle3.world  b_world.world
assignment_1/: CMakeLists.txt  package.xml
assignment_1/launch/: my_world.launch
chair_training/: CMakeLists.txt  package.xml
chair_training/config/: qlearn_params.yaml
chair_training/launch/: main.launch
chair_training/src/: chair_env.py  chair_publisher.py  chair_state.py  controllers_connection.py  start_training.py  start_trainingNelson.py  start_trainingYoutube.py
chair_training/training_results/: openaigym.episode_batch.0.201629.stats.json  openaigym.manifest.0.201629.manifest.json
homework1/: CMakeLists.txt  package.xml  pubvel.cpp
intellwheels_multi_chairs/launch/: main.launch  robots.launch
intellwheels_multi_chairs/src/: move.py  move_chairs.cpp  move_chairs.py
intellwheels_nav-origin-two_chairs/src/intellwheels_irl_nav/: reactive_chair.cpp
intellwheels_nav-origin-two_chairs/src/intellwheels_multi_chairs/src/: move.py  move_chairs.py
